# SpiriTech

./: .gitignore  CMakeLists.txt  README.md  fbuild.bff
UnifiedPlatformKernel/: CMakeLists.txt
UnifiedPlatformKernel/src/upk/: types.h
UnifiedPlatformKernel/src/upk/client/: splitscreen_types.h  viewport.h
engine/include/engine/: common.h
engine/include/engine/common/: check_architecture.h  check_compiler.h  keywords.h  primitive.h  utility_macros.h
engine/include/engine/debug/: debug_utils.h
engine/include/engine/dsp/: buffer.h  mixer_types.h  source_input_data.h  spatialization.h
engine/include/engine/math/: base4d.h  common.h  quat.h  quat_math.h  utilities.h  vec2.h  vec2_math.h  vec3.h  vec3_constants.h  vec3_job.h  vec3_math.h  vecbase.h
engine/include/engine/math/color/: color.h
engine/include/engine/math/matrix/: matrix.h
engine/include/engine/math/plane/: plane.h
engine/include/engine/math/quat/: quat.h
engine/include/engine/math/simd/: regmathsse.inl  simd_math.h  simd_types.h
engine/include/engine/platform/: compiler.h  intern_compiler_intrinsics.h  intrinsics.h  platform_defs.h  use_wchar.h
engine/include/engine/string/: parser.h  string.h
engine/include/engine/view/: player..h  view_mode..h  viewport..h
engine/include/engine/viewport/: audio_device.h  audio_device_id.h  player.h  view_mode.h  viewport.h
engine/src/: launch.cpp  type_check.cpp  vec3_math.cpp
engine/src/debug/: debug_utils.cpp
engine/src/math/: common.cpp  vec2_math.cpp  vec3_math.cpp  vec4_math.cpp
paranormal/src/: engine.cpp  game_loop.cpp  launch.cpp  launch_win.cpp  platform_win.cpp  platform_windows.cpp  player.cpp  scoped_timer.cpp  uuid.cpp  viewport.cpp
paranormal/src/paranormal/: application.hpp  archetype.hpp  chunk.hpp  engine.hpp  entity_container.hpp  exception.hpp  game_loop.hpp  map_url.hpp  module.hpp  platform.hpp  player.hpp  pointer.hpp  scene.hpp  scoped_timer.hpp  static_mesh.hpp  types.hpp  uuid.hpp  vector.hpp  viewport.hpp
paranormal/src/paranormal/entities/: light_entity.hpp  scene_entity.hpp  static_mesh_entity.hpp
paranormal/src/paranormal/game/: game_mode.hpp  input.hpp  player_state.hpp
paranormal/src/paranormal/math/: box.hpp  even_odd.hpp  math.hpp  min_max.hpp  quat.hpp  quat_ops.hpp  square_root.hpp  vector.hpp  vector_ops.hpp
paranormal/src/paranormal/scene/: light_entity.hpp  scene_entity.hpp
paranormal/src/paranormal/stdlib/: array.hpp  types.hpp
solara/: CMakeLists.txt
solara/src/solara/: libsolara.cpp  math.hpp  solara.hpp
src/: entry.cpp
src/paranormal/: platform.cxx  platform.hxx
src/solara/: solara.hxx
(+16 files in other folders)
